<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hackathon</string>
    <string name="error_title">you dun goofd</string>
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="post_event">Post</string>
    <string name="ask_question">Ask</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">Map</string>

    <string-array name="expiration_array">
        <item>Now</item>
        <item>Today</item>
        <item>This week</item>
        <item>This month</item>
    </string-array>

    <string name="title_activity_event_view">Location name</string>
    <string name="description_activity_event_view">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="expires_activity_event_view">Expires: soon</string>
    <string name="tags_activity_event_view">Tags: tags, tags, tags</string>
    <string name="by_activity_event_view">By: User 123</string>
    <string name="plus_event_view">+</string>

</resources>
