<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EventView" >

   

	<TextView
	    android:id="@+id/description"
	    android:textSize="6pt"
	    android:gravity="left"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
    	android:text="@string/description_activity_event_view" />

	<TextView
	    android:id="@+id/expires"
	    android:layout_below="@id/description"
	    android:gravity="left"
	    android:textSize="10pt"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
    	android:text="@string/expires_activity_event_view" />
	
	 <LinearLayout
	    android:orientation="vertical"
        android:id="@+id/gallery"
        android:layout_below="@id/expires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
	 
	 <TextView
	    android:id="@+id/tags"
	    android:layout_below="@id/gallery"
	    android:textSize="10pt"
	    android:gravity="left"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
    	android:text="@string/tags_activity_event_view" />
	 
	 <TextView
	    android:id="@+id/by_user"
	    android:layout_below="@id/tags"
	    android:textSize="10pt"
	    android:gravity="left"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
    	android:text="@string/by_activity_event_view" />

	  <Button
	      android:id="@+id/vote_button"
	      android:layout_width="wrap_content"
	      android:layout_height="match_parent"
	      android:layout_alignBottom="@+id/by_user"
	      android:layout_below="@+id/tags"
	      android:layout_toRightOf="@+id/by_user"
	      android:layout_marginLeft="10dp"
	      android:background="@drawable/btn_green"  
	      android:text="@string/plus_event_view"
	      android:textColor="#ffffff" />

</RelativeLayout>